tests/snapshot/error/source_locations/expression/yield_star/next_result_async_get_named_property_value_throws_module.js
var iterable = {
  [Symbol.asyncIterator]() {
    return {
      next() {
        return {
          done: false,
          get value() {
            throw new Error();
          },
        };
      }
    }
  }
};

async function *generator() {
  yield* iterable;
}

var iter = generator();
await iter.next();